[package]
name = "lite-rpc-bench"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "lite-client"
]

[[bench]]
name="tps"
harness=false

[dev-dependencies]
csv = "1.1.6"

[dependencies]
lite-client = { path = "./lite-client/" }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.89"
solana-client = "1.14.10"
solana-sdk = "1.14.10"
tokio = "1.24.2"
log = "0.4.17"
simplelog = "0.12.0"
anyhow = "1.0.66"
